--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="titulo">
-        <h1>Hola mundo</h1>        
+        <h1>Página Física</h1>        
     </div>
 </body>
 </html>
