--- a/Temas_acustica/Ley_inverso.html
+++ b/Temas_acustica/Ley_inverso.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fórmulas</title>
+    <title>Ley inverso del cuadrado para la intensidad</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,24 +31,12 @@
             color: black;
         }
 
-        #optica {
-            cursor: pointer;
-        }
-
-        #optica {
+        #inverso {
             background-color: black;
             color: white;
             text-align: center;
             font-size: 36px;
-            padding: 50px 0;
-        }
-
-        #formulas {
-            background-color: #f8c18b; /* Color Mamey */
-            color: black;
-            text-align: center;
-            font-size: 36px;
-            padding: 15px 0;
+            padding: 10px 0;
         }
 
     </style>
@@ -56,16 +44,14 @@
 
 <body>
     <div class="top-bar">
-        <a href="Optica.html">Óptica</a>
-        <a href="Acustica.html">Acústica</a>
-        <a href="Fisica_moderna.html">Física Moderna</a>
-        <a href="Conversor.html">Conversor de Unidades</a>
-        <a href="Sobre_nosotros.html">Sobre Nosotros</a>
-        <a href="Calculadora.html">Calculadora</a>
+        <a href="\Optica.html">Óptica</a>
+        <a href="\Acustica.html">Acústica</a>
+        <a href="\Fisica_moderna.html">Física Moderna</a>
+        <a href="\Conversor.html">Conversor de Unidades</a>
+        <a href="\Sobre_nosotros.html">Sobre Nosotros</a>
+        <a href="\Calculadora.html">Calculadora</a>
     </div>
-
-    <div id="optica" onclick="redirigir('Optica.html')">Óptica</div>
-    <div id="formulas">Fórmulas</div>
+    <div id="inverso">Ley inverso del cuadrado para la intensidad</div>
 
     <script>
         function redirigir(ruta) {
