--- a/Teorias.html
+++ b/Teorias.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teorias</title>
+    <title>Teorías</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -66,6 +66,20 @@
 
     <div id="optica" onclick="redirigir('Optica.html')">Óptica</div>
     <div id="teorias">Teorías</div>
+    <div id="Introduccion_a_la_optica" onclick="redirigir('/Temas_optica/Introduccion_a_la_optica.html')">Introducción a la óptica</div>
+    <div id="Espectro_electromagnetico" onclick="redirigir('/Temas_optica/Espectro_electromagnetico.html')">Espectro electromagnético</div>
+    <div id="Dualidad_onda_particula" onclick="redirigir('/Temas_optica/Dualidad_onda_particula.html')">Dualidad onda-particula</div>
+    <div id="Reflexion_y_refraccion_de_la_luz" onclick="redirigir('/Temas_optica/Reflexion_y_refraccion_de_la_luz.html')">Reflexión y refracción de la luz</div>
+    <div id="Dispersion_de_la_luz" onclick="redirigir('/Temas_optica/Dispersion_de_la_luz.html')">Dispersión de la luz</div>
+    <div id="Ondas_electromagneticas" onclick="redirigir('/Temas_optica/Ondas_electromagneticas.html')">Ondas electromagnéticas</div>
+    <div id="Luz_polarizada_y_no_polarizada" onclick="redirigir('/Temas_optica/Luz_polarizada_y_no_polarizada.html')">Luz polarizada y no polarizada</div>
+    <div id="Angulo_critico_y_distancia_focal" onclick="redirigir('/Temas_optica/Angulo_critico_y_distancia_focal.html')">Ángulo crítico y distancia focal</div>
+    <div id="Angulo_de_brewster" onclick="redirigir('/Temas_optica/Angulo_de_brewster.html')">Ángulo de brewster</div>
+    <div id="Laseres" onclick="redirigir('/Temas_optica/Laseres.html')">Láseres</div>
+    <div id="Dispositivos_iniciales_y_luz_de_fibras_opticas" onclick="redirigir('/Temas_optica/Dispositivos_iniciales_y_luz_de_fibras_opticas.html')">Dispositivos iniciales y luz de fibras ópticas</div>
+    <div id="Fenomenos_de_luminiscencia" onclick="redirigir('/Temas_optica/Fenomenos_de_luminiscencia.html')">Fenómenos de luminiscencia</div>
+    <div id="Ampliacion_de_la_imagen" onclick="redirigir('/Temas_optica/Ampliacion_de_la_imagen.html')">Ampliación de la imagen</div>
+    <div id="Lentes_delgados" onclick="redirigir('/Temas_optica/Lentes_delgados.html')">Lentes delgados</div>
 
     <script>
         function redirigir(ruta) {
