--- a/Videos_acustica.html
+++ b/Videos_acustica.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acústica</title>
+    <title>Videos de acústica</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,11 +30,8 @@
             background-color: #ddd;
             color: black;
         }
-        
-        #teorias,
-        #formulas,
-        #videos,
-        #ecuaciones {
+
+        #acustica {
             cursor: pointer;
         }
 
@@ -43,32 +40,17 @@
             color: white;
             text-align: center;
             font-size: 36px;
-            padding: 67px 0;
+            padding: 50px 0;
         }
 
-        #Teorias_acustica {
+        #videos {
             background-color: #b6ffe7; /* Verde Aqua */
             color: black;
             text-align: center;
             font-size: 36px;
-            padding: 65px 0;
+            padding: 15px 0;
         }
 
-        #Formulas_acustica {
-            background-color: #f8c18b; /* Color Mamey */
-            color: black;
-            text-align: center;
-            font-size: 36px;
-            padding: 65px 0;
-        }
-
-        #Videos_acustica {
-            background-color: #b6ffe7; /* Verde Aqua */
-            color: black;
-            text-align: center;
-            font-size: 36px;
-            padding: 65px 0;
-        }
     </style>
 </head>
 
@@ -82,10 +64,8 @@
         <a href="Calculadora.html">Calculadora</a>
     </div>
 
-    <div id="acustica">Acústica</div>
-    <div id="Teorias_acustica" onclick="redirigir('Teorias_acustica.html')">Teorías</div>
-    <div id="Formulas_acustica" onclick="redirigir('Formulas_acustica.html')">Fórmulas</div>
-    <div id="Videos_acustica" onclick="redirigir('Videos_acustica.html')">Videos</div>
+    <div id="acustica" onclick="redirigir('Acustica.html')">Acústica</div>
+    <div id="videos">Videos</Video></div>
 
     <script>
         function redirigir(ruta) {
