--- a/Teorias.html
+++ b/Teorias.html
@@ -187,6 +187,7 @@
         <p>(Fernández, n.d.)</p>
         <p>El aumento lateral (AL) es una medida de la ampliación o reducción de una imagen en comparación con el objeto original. Se define como la relación entre la altura de la imagen (y′) y la altura del objeto (y). (Fernández, n.d.)</p>
     </div>
+    <div id="Referencias" onclick="redirigir('/Temas_optica/Referencias.html')">Referencias</div>
     <script>
         function redirigir(ruta) {
             window.location.href = ruta;
